Refactor core classes with professional code patterns
Co-authored-by: MacMoment <230276280+MacMoment@users.noreply.github.com>